--- a/deface.html
+++ b/deface.html
@@ -30,4 +30,8 @@
             </center>
     </body>
     <div style="display: none;">
+	    <audio controls="controls" autoplay="autoplay">
+<source src="index_.mp3" type="audio/mp3">
+Tarayıcınız audio etiketini desteklememektedir.
+</audio>
 </html>
